syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package file;

service FileService {
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
  
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse);
  
  rpc GetFileInfo (GetFileInfoRequest) returns (GetFileInfoResponse);
  
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
}
message UploadFileRequest {
  string fileName = 1;
  string contentType = 2;
  bytes fileData = 3;
  string userId = 4;
}

message UploadFileResponse {
  bool success = 1;
  string fileId = 2;
  string fileName = 3;
  string fileUrl = 4;
  int64 fileSize = 5;
  string message = 6;
}

message DownloadFileRequest {
  string fileName = 1;
  string userId = 2;
}

message DownloadFileResponse {
  bool success = 1;
  bytes fileData = 2;
  string fileName = 3;
  string contentType = 4;
  string message = 5;
}

message DeleteFileRequest {
  string fileName = 1;
  string userId = 2;
}

message DeleteFileResponse {
  bool success = 1;
  string message = 2;
}

message GetFileInfoRequest {
  string fileName = 1;
  string userId = 2;
}

message GetFileInfoResponse {
  bool success = 1;
  FileInfo fileInfo = 2;
  string message = 3;
}

message FileInfo {
  string fileName = 1;
  string fileUrl = 2;
  int64 fileSize = 3;
  string contentType = 4;
  string uploadedBy = 5;
  string uploadedAt = 6;
}

message ListFilesRequest {
  string userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message ListFilesResponse {
  bool success = 1;
  repeated FileInfo files = 2;
  int32 totalCount = 3;
  int32 currentPage = 4;
  int32 totalPages = 5;
  string message = 6;
} 